tp/fil-rouge-taskflow/starter/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow
  labels:
    app: taskflow
    env: lab
