tp/fil-rouge-taskflow/starter/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow
  namespace: taskflow
  labels:
    app: taskflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskflow
  template:
    metadata:
      labels:
        app: taskflow
    spec:
      containers:
        - name: taskflow
          image: taskflow:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
