tp/fil-rouge-taskflow/starter/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow
  namespace: taskflow
  labels:
    app: taskflow
spec:
  type: ClusterIP
  selector:
    app: taskflow
  ports:
    - name: http
      port: 80
      targetPort: 80
