tp/fil-rouge-taskflow/starter/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskflow
  namespace: taskflow
  labels:
    app: taskflow
spec:
  rules:
    - host: taskflow.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskflow
                port:
                  number: 80
